# music-api

./: Cargo.toml  Rocket.toml
sql/: project_music.sql
src/: main.rs
src/models/file/: file_controller.rs
src/models/music/: mod.rs  music.rs  music_controller.rs  music_dto.rs  music_service.rs
src/models/song_list/: mod.rs  song_list.rs  song_list_controller.rs  song_list_dto.rs  song_list_service.rs
src/router/: file.rs  mod.rs  music.rs  song_list.rs
src/utils/: catcher.rs  db.rs  lyrics.rs  mod.rs  res.rs
static/lyrics/: 就是南方凯 - 你就是远方.lrc  枯木逢春 - 这城市风总是很大.lrc  理想三旬2019.lrc
