[package]
name = "music-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }

serde = { version = "1.0.204", features = ["derive"] }

sea-orm = { version = "0.12.15", features = ["runtime-tokio-native-tls", "sqlx-mysql"] }
sea-orm-rocket = "0.5"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
chrono = "0.4.38"